--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "gulp-webp": "4.0.1",
     "stylelint": "13.13.1",
     "webpack": "4.42.0",
-    "webpack-stream": "5.2.1"
+    "webpack-stream": "5.2.1",
+    "gulp-pug": "^5.0.0",
+    "pug": "^3.0.2"
   }
 }
