--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "cross-env NODE_ENV=development gulp start",
     "webp": "gulp webp",
     "imagemin": "gulp imagemin",
-    "deploy": "gulp deploy"
+    "deploy": "gulp deploy",
+    "publish": "gh-pages -d build"
   },
   "editorconfig-cli": [
     "*.json",
@@ -37,6 +38,7 @@
     "del": "5.1.0",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "eslint": "^7.32.0",
+    "gh-pages": "^6.1.1",
     "gulp": "4.0.2",
     "gulp-csso": "3.0.1",
     "gulp-gh-pages": "^0.5.4",
